@@ -1,3 +1,14 @@
+2005-02-16  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-smb.el (all): Remove debug construct for
+	`with-parsed-tramp-file-name'.
+	(tramp-smb-prompt): Prompt can contain spaces inside directory
+	names.
+	(tramp-smb-handle-delete-directory, tramp-smb-handle-delete-file):
+	No error message if DIRECTORY or FILENAME doesn't exist.
+	(tramp-smb-open-connection): Check existence of
+	`tramp-smb-program'.
+
 2005-02-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-file-name-for-operation) Use 'dired-call-process
